# actix-i18n

./: Cargo.toml  README.md
examples/: server.rs
src/: args.rs  error.rs  lib.rs  locale.rs  resources.rs
