[package]
name = "actix-i18n"
version = "0.1.0"
edition = "2021"
authors = ["Collide <three-dim-sky@foxmail.com>", "zooeywm <zooeywm@gmail.com>"]
description = "I18N support for Actix Web"
keywords = ["actix", "web", "i18n"]
categories = ["internationalization", "web-programming::http-server"]
license = "MIT/Apache-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md"]

[dependencies]
actix-web = { version = "4", default-features = false }
# i18n tool
fluent = "0.16"
fluent-langneg = "0.13"
fluent-syntax = "0.11"
unic-langid = { version = "0.9", features = ["macros"] }
intl-memoizer = "0.5"
# log
log = "0.4"
# code
smallvec = "1.11"
thiserror = "1"

[dev-dependencies]
env_logger = "0.10.0"

[dev-dependencies.actix-web]
version = "4"
default-features = false
features = ["macros"]
